2019-09-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define gdk_cursor_destroy as gdk_cursor_unref
      when gdk_cursor_destroy is not defined.

2019-09-16 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define GtkNotebookPage as GtkWidget when
      GtkNotebookPage is not defined.

2019-09-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define GtkTooltips as void when not defined.

2019-08-21 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_bulb.c: Reinstate sink and destroying of widget2 and widget3
      before exiting check_overides.

2019-08-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Eliminate else clause in get_popup_delay.
      Add geda_menu_item_popdown_submenu function documentation.

2019-07-29 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_label.c: Add internal function documentation tags:

          * geda_label_motion
          * geda_label_destroy_window
          * geda_label_create_window
          * geda_label_ensure_select_info

    * src/widgets/geda_option_menu.c: Add internal function documentation
      tags for widget class over-rides:

          * geda_option_menu_size_request
          * geda_option_menu_size_allocate
          * geda_option_menu_expose

2019-07-25 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_action.h: Add member action_name.

    * src/widgets/geda_action.c: Add function geda_action_get_action_name,
      update documentation format.

2019-06-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/functions/geda_mnemonic_hash.c: Add function documentation:

          * geda_mnemonic_hash_free
          * geda_mnemonic_hash_add

    * src/functions/geda_widget.c: Update function documentation:

          * geda_widget_set_pointer_position

    * src/widgets/geda_combobox.c: Substitute geda_container_get_children macro
      for gtk_container_get_children, substitute geda_container_remove macro